clarify whatif tool is jupyter classic only

--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -308,7 +308,7 @@
         <div class="row" id="what-if">
             <div class="col-sm-12">
                 <div class="card">
-                    <h4 class="card-header" id="what-if-tol">What-if-Tool Feature Analytics</h4>
+                    <h4 class="card-header" id="what-if-tol">What-if-Tool Feature Analytics (Jupyter only, not Jupyterlab)</h4>
                     <div class="card-body">
                         <ul>
                             {{ range (where .Pages "File.Dir" "in" "/featurestore/feature-bias/").ByTitle }}
