--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -43,14 +43,14 @@
                           {{ range (where .Pages "File.Dir" "in" "/featurestore/gcp/").ByTitle }}
                             <a href="https://colab.research.google.com/github/jimdowling/hops-examples/blob/examples_missing/notebooks/featurestore/gcp/colab.ipynb">
 			      Run example in Google Colab
-                            </a>			  
+                            </a>
                             {{ end }}
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-	
+
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
@@ -111,13 +111,13 @@
                 <div class="card">
                     <h4 class="card-header" id="hsfs_online_featurestore">Online Feature Store end-to-end</h4>
                     <div class="card-body">
-                        <ul>
+                        <ol start="0">
                             {{ range (where .Pages "File.Dir" "in" "/featurestore/hsfs/online_featurestore/").ByTitle }}
                             <li>
                                 <a href="{{.Permalink}}">{{.Title}}</a>
                             </li>
                             {{ end }}
-                        </ul>
+                        </ol>
                     </div>
                 </div>
             </div>
@@ -190,7 +190,7 @@
                 </div>
             </div>
         </div>
-  
+
         <div class="row" id="aws">
             <div class="col-sm-12">
                 <h3 class="category_header">AWS and the Feature Store</h3>
@@ -321,7 +321,7 @@
                 </div>
             </div>
 	</div>
-	
+
         <div class="row">
             <div class="col-sm-12">
                 <div class="card">
