--- a/themes/berbera/layouts/_default/baseof.html
+++ b/themes/berbera/layouts/_default/baseof.html
@@ -51,6 +51,12 @@
                 <ul class="nav navbar-nav">
                     <li><a href="https://hopsworks.ai" title="Hopsworks.ai">Hopsworks</a></li>
                     <li><a href="https://docs.hopsworks.ai" title="Docs">Docs</a></li>
+                    <li><label for="version-select">Version:</label>
+		      <select name="version" id="version-select">
+			<option value="master"><a href="https://examples.hopsworks.ai/master/"></a></option>
+			<option value="2.4"><a href="https://examples.hopsworks.ai/release-2.4/"></a></option>
+		      </select>
+		    </li>
                 </ul>
             </div>
         </div>
