--- a/themes/berbera/static/css/custom.css
+++ b/themes/berbera/static/css/custom.css
@@ -191,7 +191,7 @@ Navbar
 
 .navbar .navbar-brand, .navbar .navbar-brand:hover {
   color: #ffffff;
-  font-size: 17px;
+  font-size: 20px;
   float: left;
   margin-left: -15px;
   line-height: 20px;
@@ -200,11 +200,20 @@ Navbar
 
 .navbar-nav > li > a {
   color: #ffffff;
-  font-size: 15px;
+  font-size: 20px;
   font-weight: 500;
   font-family: sans-serif;
   padding: 15px;
 }
+
+
+.navbar-nav > li > select {
+  color: #111111;
+  font-size: 15px;
+  font-weight: 500;
+  font-family: sans-serif;
+}
+
 
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E")
