--- a/themes/berbera/layouts/partials/head-meta.html
+++ b/themes/berbera/layouts/partials/head-meta.html
@@ -16,4 +16,6 @@
 <meta name="yandex-verification" content="{{ . }}" />
 {{ end }}
 
+<link href="https://uploads-ssl.webflow.com/5f6353590bb01cacbcecfbac/5fae450f4c337b814a73a7f7_favicon-png.png" rel="icon" type="image/x-icon">
+
 {{- .Hugo.Generator -}}
