Trying with favicon for examples.hopsworks.ai/

--- a/themes/berbera/layouts/_default/baseof.html
+++ b/themes/berbera/layouts/_default/baseof.html
@@ -26,6 +26,7 @@
         crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
+    <link href="https://uploads-ssl.webflow.com/5f6353590bb01cacbcecfbac/5fae450f4c337b814a73a7f7_favicon-png.png" rel="icon" type="image/x-icon">
     <link href="{{ .Site.BaseURL }}css/custom.css" rel="stylesheet">
     <link href="{{ .Site.BaseURL }}css/syntax.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,500,700" rel="stylesheet">
