--- a/themes/berbera/layouts/partials/head-meta.html
+++ b/themes/berbera/layouts/partials/head-meta.html
@@ -16,9 +16,7 @@
 <meta name="yandex-verification" content="{{ . }}" />
 {{ end }}
 
-<<<<<<< HEAD
-<link href="{{ absURL `https://uploads-ssl.webflow.com/5f6353590bb01cacbcecfbac/5fae450f4c337b814a73a7f7_favicon-png.png" rel="icon" type="image/x-icon` }}">
+<link href="https://uploads-ssl.webflow.com/5f6353590bb01cacbcecfbac/5fae450f4c337b814a73a7f7_favicon-png.png" rel="shortcut icon" type="image/x-icon">
+<link href="https://uploads-ssl.webflow.com/5f6353590bb01cacbcecfbac/5fae456082003259e3781578_social_01.png" rel="apple-touch-icon">
 
-=======
->>>>>>> da18c9ae1824f88d6a79c98236d469d807f3c01e
 {{- .Hugo.Generator -}}
