now must the favicon work

--- a/themes/berbera/layouts/partials/head-meta.html
+++ b/themes/berbera/layouts/partials/head-meta.html
@@ -16,4 +16,7 @@
 <meta name="yandex-verification" content="{{ . }}" />
 {{ end }}
 
+<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+<link href="favicon.ico" rel="apple-touch-icon">
+
 {{- .Hugo.Generator -}}
