--- a/themes/berbera/layouts/index.html
+++ b/themes/berbera/layouts/index.html
@@ -73,7 +73,7 @@
       <div class="row">
           <div class="col-sm-12">
               <div class="card">
-                  <h4 class="card-header" id="hsfs_complex_features">Feature group with complext type of features</h4>
+                  <h4 class="card-header" id="hsfs_complex_features">Feature group with complex type of features</h4>
                   <div class="card-body">
                       <ul>
                           {{ range (where .Pages "File.Dir" "in" "/featurestore/hsfs/complex_features/").ByTitle }}
